--- a/src/style.css
+++ b/src/style.css
@@ -789,7 +789,11 @@ main {
     background-color: var(--tertiary-700); }
     @media (max-width: 880px) {
       .contact-box {
-        clip-path: none; } }
+        clip-path: none;
+        width: 90%; } }
+    @media (max-width: 672px) {
+      .contact-box {
+        width: 95%; } }
   .contact-container {
     width: 100%;
     height: 100%;
@@ -803,12 +807,18 @@ main {
     font-family: Montserrat, sans-serif;
     color: var(--bgcolor);
     text-align: center;
-    font-size: 4rem;
+    font-size: 3.5rem;
     line-height: 4rem;
     padding: 1rem 0;
     text-transform: uppercase;
     white-space: nowrap;
     overflow: hidden; }
+    @media (max-width: 880px) {
+      .contact-head {
+        font-size: 3.4rem; } }
+    @media (max-width: 672px) {
+      .contact-head {
+        font-size: 3rem; } }
   .contact-form {
     width: 75%;
     height: 80%;
@@ -896,6 +906,9 @@ main {
         flex-flow: column;
         justify-content: flex-start;
         align-items: center; }
+        @media (max-width: 672px) {
+          .team-section__body .person {
+            height: 17.5rem; } }
         .team-section__body .person-box {
           width: 15rem;
           height: 15rem;
@@ -909,6 +922,10 @@ main {
           transition: all var(--transition-time) ease-in-out;
           outline: 12px solid transparent;
           transform: scale(1); }
+          @media (max-width: 672px) {
+            .team-section__body .person-box {
+              width: 12.5rem;
+              height: 12.5rem; } }
           .team-section__body .person-box > * {
             opacity: 0;
             width: 100%;
