--- a/src/style.css
+++ b/src/style.css
@@ -365,6 +365,9 @@ main {
   justify-content: space-between;
   align-items: center;
   box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034), 0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06), 0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086), 0 100px 80px rgba(0, 0, 0, 0.12); }
+  @media print {
+    .header {
+      display: none; } }
   .header-left {
     width: 20%;
     height: 100%;
@@ -686,6 +689,9 @@ main {
   overflow: hidden;
   background-color: var(--tertiary-800);
   color: var(--bgcolor); }
+  @media print {
+    .footer {
+      display: none; } }
   .footer-top {
     width: 100%;
     height: 80%;
@@ -1035,7 +1041,7 @@ main {
     margin: 0 1.5rem;
     border-radius: 500px; }
   .timeline-container {
-    width: 80%;
+    width: 85%;
     height: 100%; }
     @media (max-width: 880px) {
       .timeline-container {
@@ -1045,7 +1051,7 @@ main {
         width: 97.5%; } }
 
 .activity {
-  width: 75%;
+  width: 85%;
   position: relative;
   padding: 0.5rem 0.5rem 0.5rem 0; }
   @media (max-width: 880px) {
@@ -1091,6 +1097,7 @@ main {
   .activity-title {
     width: 100%;
     font-size: 1.5rem;
+    line-height: 1.75rem;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -1911,6 +1918,9 @@ textarea {
     outline: none;
     background-color: var(--primary-4);
     color: var(--bgcolor); }
+  @media print {
+    .scroll-to-top {
+      display: none; } }
 
 .snackbar {
   background-color: var(--tcolor-400);
